# qml_cpp_communication

./: CMakeLists.txt  README.md  launcher.cpp  requirement.md
application/: control.cpp  control.hpp
connections/: .gitignore  back.list  front.list  notifiable.list
connections/mainfiles/: CMakeLists.txt  backendconnectionside.cpp  frontendconnectionside.cpp  impl_backendconnectionside.cpp  impl_backendconnectionside.hpp  impl_frontendconnectionside.cpp  impl_frontendconnectionside.hpp  preprocessor.cpp
connections/notifiable/: _backedreemits.hpp  _connections.hpp  _types.hpp  crashreport.hpp  runningstate.hpp
connections/signalslot/: _connections.hpp  _types.hpp  applicationcontrol.back.hpp  applicationcontrol.front.hpp  showsingleapplication.back.hpp  showsingleapplication.front.hpp
log/: logenum.hpp  logger.hpp  qtintegration.hpp  write  write.cpp
misc/: boolproxy.hpp  flat_map.hpp  qtinvokemethod.hpp  qtjson.hpp  singleapplication.hpp  threadchecking.hpp
qml/: ApplicationWindow.qml  SingleApplicationDialog.qml  StartApplicationButton.qml  launcher.qrc
